projects/network/src/lib/vpc-3tier-zcp.yml
{
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "VPC Configuration"
          },
          "Parameters": [
            "Environment",
            "MaxAZs",
            "VPCCIDR",
            "PublicSubnetCIDRMask",
            "PrivateSubnetCIDRMask",
            "DbSubnetCIDRMask"
          ]
        },
        {
          "Label": {
            "default": "(Optional) Create Pod Subnet for ZCP"
          },
          "Parameters": [
            "useZCP"
          ]
        }
      ]
    }
  },
  "Parameters": {
    "Environment": {
      "Type": "String",
      "Default": "dev",
      "AllowedValues": [
        "dmz",
        "dev",
        "shared",
        "prod"
      ],
      "Description": "Environment"
    },
    "MaxAZs": {
      "Type": "Number",
      "Default": 2,
      "Description": "Max Availability Zones",
      "MaxValue": 4,
      "MinValue": 2
    },
    "VPCCIDR": {
      "Type": "String",
      "Default": "10.229.0.0/16",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
      "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
      "Description": "CIDR block for the VPC"
    },
    "PublicSubnetCIDRMask": {
      "Type": "Number",
      "Default": 28,
      "ConstraintDescription": "CIDR network mask parameter must be in the form x.x.x.x/16-28",
      "Description": "CIDR block for the Public Subnet"
    },
    "PrivateSubnetCIDRMask": {
      "Type": "Number",
      "Default": 24,
      "ConstraintDescription": "CIDR network mask parameter must be in the form x.x.x.x/16-28",
      "Description": "CIDR block for the Private Subnet"
    },
    "useZCP": {
      "Type": "String",
      "Default": "false",
      "AllowedValues": [
        "true",
        "false"
      ],
      "Description": "Enable/Disable ZCP"
    },
    "DbSubnetCIDRMask": {
      "Type": "Number",
      "Default": 28,
      "ConstraintDescription": "CIDR network mask parameter must be in the form x.x.x.x/16-28",
      "Description": "CIDR block for the DB Subnet"
    },
  },
  "Conditions": {
    "UseZCP": {
      "Fn::Equals": [
        "true",
        {
          "Ref": "useZCP"
        }
      ]
    },
    "NotUseZCP": {
      "Fn::Equals": [
        "false",
        {
          "Ref": "useZCP"
        }
      ]
    }
  },
  "Resources": {
    "Vpc8378EB38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.229.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "Environment"
                  },
                  "-vpc"
                ]
              ]
            }
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/Resource"
      },
      "Condition": "NotUseZCP"
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.0.0/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-northeast-2a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet1/Subnet"
      }
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet1/RouteTable"
      }
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet1/DefaultRoute"
      }
    },
    "VpcPublicSubnet1EIPD7E02669": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet1/EIP"
      }
    },
    "VpcPublicSubnet1NATGateway4D7517AA": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcPublicSubnet1EIPD7E02669",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet1/NATGateway"
      }
    },
    "VpcPublicSubnet2Subnet691E08A3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.0.16/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-northeast-2c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet2/Subnet"
      }
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet2/RouteTable"
      }
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489"
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PublicSubnet2/DefaultRoute"
      }
    },
    "VpcPrivateSubnet1Subnet536B997A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.1.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-northeast-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PrivateSubnet1/Subnet"
      }
    },
    "VpcPrivateSubnet1RouteTableB2C5B500": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PrivateSubnet1/RouteTable"
      }
    },
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet1Subnet536B997A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "VpcPrivateSubnet2Subnet3788AAA1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.2.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-northeast-2c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PrivateSubnet2/Subnet"
      }
    },
    "VpcPrivateSubnet2RouteTableA678073B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PrivateSubnet2/RouteTable"
      }
    },
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet2RouteTableA678073B"
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "VpcPrivateSubnet2DefaultRoute060D2087": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet2RouteTableA678073B"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "VpcDbSubnet1Subnet2B414936": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.3.0/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-northeast-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Db"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/DbSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/DbSubnet1/Subnet"
      }
    },
    "VpcDbSubnet1RouteTable7C431541": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/DbSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/DbSubnet1/RouteTable"
      }
    },
    "VpcDbSubnet1RouteTableAssociation3B57E8C2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcDbSubnet1RouteTable7C431541"
        },
        "SubnetId": {
          "Ref": "VpcDbSubnet1Subnet2B414936"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/DbSubnet1/RouteTableAssociation"
      }
    },
    "VpcDbSubnet2Subnet009B6CC4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.3.16/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-northeast-2c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Db"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/DbSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/DbSubnet2/Subnet"
      }
    },
    "VpcDbSubnet2RouteTableB857358F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/Vpc/DbSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/DbSubnet2/RouteTable"
      }
    },
    "VpcDbSubnet2RouteTableAssociation82DF3E46": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcDbSubnet2RouteTableB857358F"
        },
        "SubnetId": {
          "Ref": "VpcDbSubnet2Subnet009B6CC4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/DbSubnet2/RouteTableAssociation"
      }
    },
    "VpcIGWD7BA715C": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "Environment"
                  },
                  "-vpc"
                ]
              ]
            }
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/IGW"
      }
    },
    "VpcVPCGWBF912B6E": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/Vpc/VPCGW"
      }
    },
    "VPCWithZCP1F8B29D1": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.229.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "Environment"
                  },
                  "-vpc"
                ]
              ]
            }
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/Resource"
      },
      "Condition": "UseZCP"
    },
    "VPCWithZCPPublicSubnet1SubnetA38BFAD3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.0.0/28",
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "AvailabilityZone": "ap-northeast-2a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1/Subnet"
      }
    },
    "VPCWithZCPPublicSubnet1RouteTableFB9938EE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1/RouteTable"
      }
    },
    "VPCWithZCPPublicSubnet1RouteTableAssociationD0F4F294": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPPublicSubnet1RouteTableFB9938EE"
        },
        "SubnetId": {
          "Ref": "VPCWithZCPPublicSubnet1SubnetA38BFAD3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1/RouteTableAssociation"
      }
    },
    "VPCWithZCPPublicSubnet1DefaultRoute77243ADC": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPPublicSubnet1RouteTableFB9938EE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCWithZCPIGWBF757C2C"
        }
      },
      "DependsOn": [
        "VPCWithZCPVPCGW1D5E4E1D"
      ],
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1/DefaultRoute"
      }
    },
    "VPCWithZCPPublicSubnet1EIPC181A8DF": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1/EIP"
      }
    },
    "VPCWithZCPPublicSubnet1NATGatewayBBDC6E60": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "VPCWithZCPPublicSubnet1SubnetA38BFAD3"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "VPCWithZCPPublicSubnet1EIPC181A8DF",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet1/NATGateway"
      }
    },
    "VPCWithZCPPublicSubnet2Subnet55641EB4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.0.16/28",
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "AvailabilityZone": "ap-northeast-2c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet2/Subnet"
      }
    },
    "VPCWithZCPPublicSubnet2RouteTable7A7D552A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet2/RouteTable"
      }
    },
    "VPCWithZCPPublicSubnet2RouteTableAssociationFE5A1A15": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPPublicSubnet2RouteTable7A7D552A"
        },
        "SubnetId": {
          "Ref": "VPCWithZCPPublicSubnet2Subnet55641EB4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet2/RouteTableAssociation"
      }
    },
    "VPCWithZCPPublicSubnet2DefaultRoute7283BD00": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPPublicSubnet2RouteTable7A7D552A"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCWithZCPIGWBF757C2C"
        }
      },
      "DependsOn": [
        "VPCWithZCPVPCGW1D5E4E1D"
      ],
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PublicSubnet2/DefaultRoute"
      }
    },
    "VPCWithZCPPrivateSubnet1Subnet7DFDAE8E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.1.0/24",
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "AvailabilityZone": "ap-northeast-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet1/Subnet"
      }
    },
    "VPCWithZCPPrivateSubnet1RouteTable7A90C0E5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet1/RouteTable"
      }
    },
    "VPCWithZCPPrivateSubnet1RouteTableAssociationE83D972E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPPrivateSubnet1RouteTable7A90C0E5"
        },
        "SubnetId": {
          "Ref": "VPCWithZCPPrivateSubnet1Subnet7DFDAE8E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "VPCWithZCPPrivateSubnet1DefaultRouteE271C6F1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPPrivateSubnet1RouteTable7A90C0E5"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCWithZCPPublicSubnet1NATGatewayBBDC6E60"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet1/DefaultRoute"
      }
    },
    "VPCWithZCPPrivateSubnet2Subnet48DB7996": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.2.0/24",
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "AvailabilityZone": "ap-northeast-2c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet2/Subnet"
      }
    },
    "VPCWithZCPPrivateSubnet2RouteTable1B2EC1CA": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet2/RouteTable"
      }
    },
    "VPCWithZCPPrivateSubnet2RouteTableAssociation419778E9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPPrivateSubnet2RouteTable1B2EC1CA"
        },
        "SubnetId": {
          "Ref": "VPCWithZCPPrivateSubnet2Subnet48DB7996"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "VPCWithZCPPrivateSubnet2DefaultRoute980E637B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPPrivateSubnet2RouteTable1B2EC1CA"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCWithZCPPublicSubnet1NATGatewayBBDC6E60"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/PrivateSubnet2/DefaultRoute"
      }
    },
    "VPCWithZCPZcpPodSubnet1SubnetB46E6830": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.4.0/22",
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "AvailabilityZone": "ap-northeast-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ZcpPod"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet1/Subnet"
      }
    },
    "VPCWithZCPZcpPodSubnet1RouteTableBF494565": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet1/RouteTable"
      }
    },
    "VPCWithZCPZcpPodSubnet1RouteTableAssociation4C6C6CEE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPZcpPodSubnet1RouteTableBF494565"
        },
        "SubnetId": {
          "Ref": "VPCWithZCPZcpPodSubnet1SubnetB46E6830"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet1/RouteTableAssociation"
      }
    },
    "VPCWithZCPZcpPodSubnet1DefaultRoute72416EF8": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPZcpPodSubnet1RouteTableBF494565"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCWithZCPPublicSubnet1NATGatewayBBDC6E60"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet1/DefaultRoute"
      }
    },
    "VPCWithZCPZcpPodSubnet2Subnet440CF3DF": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.8.0/22",
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "AvailabilityZone": "ap-northeast-2c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ZcpPod"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet2/Subnet"
      }
    },
    "VPCWithZCPZcpPodSubnet2RouteTableFC98E755": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet2/RouteTable"
      }
    },
    "VPCWithZCPZcpPodSubnet2RouteTableAssociation23E98BD0": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPZcpPodSubnet2RouteTableFC98E755"
        },
        "SubnetId": {
          "Ref": "VPCWithZCPZcpPodSubnet2Subnet440CF3DF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet2/RouteTableAssociation"
      }
    },
    "VPCWithZCPZcpPodSubnet2DefaultRoute06960BA8": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPZcpPodSubnet2RouteTableFC98E755"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCWithZCPPublicSubnet1NATGatewayBBDC6E60"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/ZcpPodSubnet2/DefaultRoute"
      }
    },
    "VPCWithZCPDbSubnet1Subnet2E4240B0": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.12.0/28",
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "AvailabilityZone": "ap-northeast-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Db"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/DbSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/DbSubnet1/Subnet"
      }
    },
    "VPCWithZCPDbSubnet1RouteTableF378C266": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/DbSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/DbSubnet1/RouteTable"
      }
    },
    "VPCWithZCPDbSubnet1RouteTableAssociation866119E9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPDbSubnet1RouteTableF378C266"
        },
        "SubnetId": {
          "Ref": "VPCWithZCPDbSubnet1Subnet2E4240B0"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/DbSubnet1/RouteTableAssociation"
      }
    },
    "VPCWithZCPDbSubnet2SubnetF8B9CB82": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.229.12.16/28",
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "AvailabilityZone": "ap-northeast-2c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Db"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/DbSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/DbSubnet2/Subnet"
      }
    },
    "VPCWithZCPDbSubnet2RouteTable889D7CF9": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPCWithECSCLuster/VPCWithZCP/DbSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/DbSubnet2/RouteTable"
      }
    },
    "VPCWithZCPDbSubnet2RouteTableAssociation6700FBF7": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCWithZCPDbSubnet2RouteTable889D7CF9"
        },
        "SubnetId": {
          "Ref": "VPCWithZCPDbSubnet2SubnetF8B9CB82"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/DbSubnet2/RouteTableAssociation"
      }
    },
    "VPCWithZCPIGWBF757C2C": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "Environment"
                  },
                  "-vpc"
                ]
              ]
            }
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/IGW"
      }
    },
    "VPCWithZCPVPCGW1D5E4E1D": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPCWithZCP1F8B29D1"
        },
        "InternetGatewayId": {
          "Ref": "VPCWithZCPIGWBF757C2C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VPCWithECSCLuster/VPCWithZCP/VPCGW"
      }
    }
  },
  "Outputs": {
    "ExportsOutputRefVPCWithZCPPublicSubnet1SubnetA38BFAD329050B71": {
      "Value": {
        "Ref": "VPCWithZCPPublicSubnet1SubnetA38BFAD3"
      },
      "Export": {
        "Name": "VPCWithECSCLuster:ExportsOutputRefVPCWithZCPPublicSubnet1SubnetA38BFAD329050B71"
      }
    },
    "ExportsOutputRefVPCWithZCPPublicSubnet2Subnet55641EB4F3D9EF03": {
      "Value": {
        "Ref": "VPCWithZCPPublicSubnet2Subnet55641EB4"
      },
      "Export": {
        "Name": "VPCWithECSCLuster:ExportsOutputRefVPCWithZCPPublicSubnet2Subnet55641EB4F3D9EF03"
      }
    },
    "ExportsOutputRefVPCWithZCP1F8B29D1FF2D6F84": {
      "Value": {
        "Ref": "VPCWithZCP1F8B29D1"
      },
      "Export": {
        "Name": "VPCWithECSCLuster:ExportsOutputRefVPCWithZCP1F8B29D1FF2D6F84"
      }
    },
    "ExportsOutputRefVPCWithZCPPrivateSubnet1Subnet7DFDAE8E7AAE99D4": {
      "Value": {
        "Ref": "VPCWithZCPPrivateSubnet1Subnet7DFDAE8E"
      },
      "Export": {
        "Name": "VPCWithECSCLuster:ExportsOutputRefVPCWithZCPPrivateSubnet1Subnet7DFDAE8E7AAE99D4"
      }
    },
    "ExportsOutputRefVPCWithZCPPrivateSubnet2Subnet48DB7996755F4C91": {
      "Value": {
        "Ref": "VPCWithZCPPrivateSubnet2Subnet48DB7996"
      },
      "Export": {
        "Name": "VPCWithECSCLuster:ExportsOutputRefVPCWithZCPPrivateSubnet2Subnet48DB7996755F4C91"
      }
    },
    "ExportsOutputRefVPCWithZCPZcpPodSubnet1SubnetB46E68302AE9C083": {
      "Value": {
        "Ref": "VPCWithZCPZcpPodSubnet1SubnetB46E6830"
      },
      "Export": {
        "Name": "VPCWithECSCLuster:ExportsOutputRefVPCWithZCPZcpPodSubnet1SubnetB46E68302AE9C083"
      }
    },
    "ExportsOutputRefVPCWithZCPZcpPodSubnet2Subnet440CF3DF05481A43": {
      "Value": {
        "Ref": "VPCWithZCPZcpPodSubnet2Subnet440CF3DF"
      },
      "Export": {
        "Name": "VPCWithECSCLuster:ExportsOutputRefVPCWithZCPZcpPodSubnet2Subnet440CF3DF05481A43"
      }
    }
  }
}
